# spark-studies

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.history  Dockerfile.spark  requirements.txt
src/mod-01/: get-users-by-country.py  get-users-json.py
src/mod-02/: pr-2-ex-01-basic-sparksession.py  pr-2-ex-02-memory-management.py  pr-2-ex-03-spark-singleton-env.py
storage/: users.jsonl
